--- a/about.html
+++ b/about.html
@@ -8,19 +8,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="resources/css/style.css">
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+    <nav class="navbar" style="background-color: #bed7e9; sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Learning with the Cool Kids!</a>
+        <a class="navbar-brand" href="#">LEARNING WITH THE COOL KIDS!</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            <li>
+              <img class="fit-logo" src="/resources/images/toddlers holding hands.jpg" alt="kids holding hands">
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./about.html">About</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./about.html">ABOUT</a>
             </li>
           </ul>
         </div>
@@ -32,28 +35,38 @@
   <main>
     <h1 class="container">The Inspiration!</h1>
     <div class="container">
-          <p>This platform or show called <em>Baby Einstein</em> is a favorite of my toddler, since 11months old. There are many episodes about Colors, Shapes, Numbers, Animals, Seasons, Musical instruments, and More. This shows also focuses on colorful visuals, different sounds and songs, as well as puppets, in which my son enjoys. </p>
+      <p>This platform or show called <em>Baby Einstein</em> is a favorite of my toddler, since 11-months old. There are many episodes about Colors, Shapes, Numbers, Animals, Seasons, Musical instruments, and More. This shows also focuses on colorful visuals, different sounds and songs, as well as puppets, which is my son's favorite. </p>
+      <div class="row">
+        <div class="column">
           <img class="fit-picture"
             src="/resources/images/Baby_Einstein_Logo.svg.png"
             alt="Baby Einstein logo">
-            <img class="fit-picture"
+        </div>
+        <div class="column">
+          <img class="fit-picture"
             src="/resources/images/maxresdefault.jpg"
             alt="Baby Einstein episdoe">
-            <img class="fit-picture"
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <img class="fit-picture"
             src="/resources/images/colors and shapes.webp"
             alt="colors and shapes">
-            <img class="fit-picture"
+        </div>  
+        <div class="column">
+          <img class="fit-picture"
             src="/resources/images/kids reading.jpg"
             alt="kids reading">
+        </div>
     </div>
   </main>
-
-
   <footer>
-    <a href="./index.html">Home</a>
-    <a href="./about.html">About</a>
-   </footer>
- 
+    <div class="navbar-footer">
+      <a href="./index.html" class="active">HOME</a>
+      <a href="./about.html">ABOUT</a>
+    </div>
+  </footer>
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
