--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="resources/css/style.css">
     
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+    <nav class="navbar" style="background-color: #bed7e9; sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Learning with the Cool Kids!</a>
+        <a class="navbar-brand" href="#">LEARNING WITH THE COOL KIDS!</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            <li>
+              <img class="fit-logo" src="/resources/images/toddlers holding hands.jpg" alt="kids holding hands">
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./about.html">About</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./about.html">ABOUT</a>
             </li>
           </ul>
         </div>
@@ -33,22 +36,22 @@
     <h1 class="container">Fun things for Toddlers to learn!</h1>
     <div class="container">
       <ol>
-        <li>Shapes</li>
+        <li>SHAPES</li>
           <p>Circles, Squares, Triangles, Rectangles, and Stars</p>
           <img class="fit-picture"
             src="/resources/images/shapes.jpg"
             alt="Different shapes">
-        <li>Numbers</li>
+        <li>NUMBERS</li>
           <p>1 One, 2 Two, 3 Three, 4 Four, and 5 Five</p>
           <img class="fit-picture"
             src="/resources/images/numbers.png"
             alt="Different numbers">
-        <li>Colors</li>
+        <li>COLORS</li>
           <p>Red, Orange, Yellow, Green, Blue, and Purple</p>
           <img class="fit-picture"
             src="/resources/images/colors.jpg"
             alt="Different colors">
-        <li>Animals</li>
+        <li>ANIMALS</li>
           <p>Lions, Elephants, Sharks, Bears, and Penguins</p>
           <img class="fit-picture"
             src="/resources/images/animals.jpg"
@@ -56,11 +59,13 @@
       </ol>
     </div>
   </main>
+  /* Found bottom navigation bar on W3schools
   <footer>
-   <a href="./index.html">Home</a>
-   <a href="./about.html">About</a>
+    <div class="navbar-footer">
+      <a href="./index.html" class="active">HOME</a>
+      <a href="./about.html">ABOUT</a>
+    </div>
   </footer>
-
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
