fixed comment showing on site

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </ol>
     </div>
   </main>
-  /* Found bottom navigation bar on W3schools
+  /* Found bottom navigation bar on W3schools*/
   <footer>
     <div class="navbar-footer">
       <a href="./index.html" class="active">HOME</a>
