--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="resources/css/style.css">
 
-    <nav class="navbar" style="background-color: #bed7e9; sticky-top">
+    <nav class="navbar" style="background-color: #bed7e9;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">LEARNING WITH THE COOL KIDS!</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
