--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="resources/css/style.css">
     
-    <nav class="navbar" style="background-color: #bed7e9; sticky-top">
+    <nav class="navbar" style="background-color: #bed7e9;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">LEARNING WITH THE COOL KIDS!</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,7 +59,7 @@
       </ol>
     </div>
   </main>
-  /* Found bottom navigation bar on W3schools*/
+
   <footer>
     <div class="navbar-footer">
       <a href="./index.html" class="active">HOME</a>
@@ -68,5 +68,6 @@
   </footer>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 </body>
 </html>
