removed / from  images

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li>
-              <img class="fit-logo" src="/resources/images/toddlers holding hands.jpg" alt="kids holding hands">
+              <img class="fit-logo" src="resources/images/toddlers holding hands.jpg" alt="kids holding hands">
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="./index.html">HOME</a>
@@ -39,24 +39,24 @@
       <div class="row">
         <div class="column">
           <img class="fit-picture"
-            src="/resources/images/Baby_Einstein_Logo.svg.png"
+            src="resources/images/Baby_Einstein_Logo.svg.png"
             alt="Baby Einstein logo">
         </div>
         <div class="column">
           <img class="fit-picture"
-            src="/resources/images/maxresdefault.jpg"
+            src="resources/images/maxresdefault.jpg"
             alt="Baby Einstein episdoe">
         </div>
       </div>
       <div class="row">
         <div class="column">
           <img class="fit-picture"
-            src="/resources/images/colors and shapes.webp"
+            src="resources/images/colors and shapes.webp"
             alt="colors and shapes">
         </div>  
         <div class="column">
           <img class="fit-picture"
-            src="/resources/images/kids reading.jpg"
+            src="resources/images/kids reading.jpg"
             alt="kids reading">
         </div>
     </div>
