--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First VsCode Project</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="resources/css/style.css">
-    
-    <nav class="navbar" style="background-color: #bed7e9;">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">LEARNING WITH THE COOL KIDS!</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li>
-              <img class="fit-logo" src="/resources/images/toddlers holding hands.jpg" alt="kids holding hands">
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">HOME</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about.html">ABOUT</a>
-            </li>
-          </ul>
-        </div>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>First VsCode Project</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="resources/css/style.css">
+
+  <nav class="navbar" style="background-color: #bed7e9;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">LEARNING WITH THE COOL KIDS!</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li>
+            <img class="fit-logo" src="resources/images/toddlers holding hands.jpg" alt="kids holding hands">
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./index.html">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./about.html">ABOUT</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 </head>
 
 <body>
@@ -37,25 +40,17 @@
     <div class="container">
       <ol>
         <li>SHAPES</li>
-          <p>Circles, Squares, Triangles, Rectangles, and Stars</p>
-          <img class="fit-picture"
-            src="/resources/images/shapes.jpg"
-            alt="Different shapes">
+        <p>Circles, Squares, Triangles, Rectangles, and Stars</p>
+        <img class="fit-picture" src="resources/images/shapes.jpg" alt="Different shapes">
         <li>NUMBERS</li>
-          <p>1 One, 2 Two, 3 Three, 4 Four, and 5 Five</p>
-          <img class="fit-picture"
-            src="/resources/images/numbers.png"
-            alt="Different numbers">
+        <p>1 One, 2 Two, 3 Three, 4 Four, and 5 Five</p>
+        <img class="fit-picture" src="resources/images/numbers.png" alt="Different numbers">
         <li>COLORS</li>
-          <p>Red, Orange, Yellow, Green, Blue, and Purple</p>
-          <img class="fit-picture"
-            src="/resources/images/colors.jpg"
-            alt="Different colors">
+        <p>Red, Orange, Yellow, Green, Blue, and Purple</p>
+        <img class="fit-picture" src="resources/images/colors.jpg" alt="Different colors">
         <li>ANIMALS</li>
-          <p>Lions, Elephants, Sharks, Bears, and Penguins</p>
-          <img class="fit-picture"
-            src="/resources/images/animals.jpg"
-            alt="Different animals">
+        <p>Lions, Elephants, Sharks, Bears, and Penguins</p>
+        <img class="fit-picture" src="resources/images/animals.jpg" alt="Different animals">
       </ol>
     </div>
   </main>
@@ -66,8 +61,11 @@
       <a href="./about.html">ABOUT</a>
     </div>
   </footer>
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
 
 </body>
+
 </html>
